<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_Safety" Id="{dde6d281-9250-0465-1848-1e8838070a42}">
    <Declaration><![CDATA[TYPE ST_Safety :
STRUCT
(*	Dane dla programu i podlementów *)	
	flSS1					: FB_BaseFlag;
	flSTO					: FB_BaseFlag;
	flGrzybCh1a				: FB_BaseFlag;
	flGrzybCh1b				: FB_BaseFlag;
(*		*)
	bArmCommand				: BOOL; 	//rozkaz uzbrojenia systemu safety
	// Zmienne bezpieczeństwa globalne
	bRunStop		AT%Q*	: BOOL := TRUE;
	bErrAck			AT%Q*	: BOOL;
	// Zmienne dla grupy 1 - grzyb
	stGroupStates1			: ST_SafetyGroupStates;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>