<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_SPM_HMI_01" Id="{32ee87d6-8706-0b99-3335-4eeb37fbf383}">
    <Declaration><![CDATA[TYPE ST_SPM_HMI_01 :
STRUCT
	bDaneUtworzone					: BOOL;
	refstReceptury					: REFERENCE TO ST_Receptury;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>