<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_SPM_HMI_06" Id="{4c3d6cdd-875e-07d1-06ab-76a5717db0ef}">
    <Declaration><![CDATA[TYPE ST_SPM_HMI_06 :
STRUCT
	bDaneUtworzone			: BOOL;
	refarrStany				: REFERENCE TO ARRAY [0..GVL_MachineControlConstans.COUNT_MACHINE_STATES] OF ITF_SITP_Element;
	refarrTryby				: REFERENCE TO ARRAY [0..GVL_MachineControlConstans.COUNT_OPERATION_MODES] OF ITF_SITP_Element;
	refArrPoleceniaStany	: REFERENCE TO ARRAY [0..GVL_MachineControlConstans.COUNT_STATE_COMMANDS] OF ITF_SITP_PolecenieZmianyStanu;
	refArrPoleceniatrybu	: REFERENCE TO ARRAY [0..GVL_MachineControlConstans.COUNT_MODE_COMMANDS] OF ITF_SITP_PolecenieZmianyTrybu;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>