<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_SITP" Id="{9e5e4a16-d3e0-0e5b-0d4a-ad90a3eb1b08}">
    <Declaration><![CDATA[TYPE ST_SITP :
STRUCT
(*	Aktualny stan			*)
	eStan										: B_Baza.E_StanyPracy := B_Baza.E_StanyPracy.Undefined;
	eStanNowy									: B_Baza.E_StanyPracy;
	eStanPoprzedni								: B_Baza.E_StanyPracy;
(*	Aktualny tryb pracy		*)
	eTryb										: B_Baza.E_TrybyPracy := B_Baza.E_TrybyPracy.Niedozwolony;
	eTrybNowy									: B_Baza.E_TrybyPracy;
	eTrybPoprzedni								: B_Baza.E_TrybyPracy;
(*	Aktywny gdy trwa przełączanie stanu	*)
	bStanZmiana									: BOOL;
(*	Aktywny gdy trwa przełaczanie trybu	*)
	bTrybZmiana									: BOOL;	
	bBylaZmianaTrybu							: bool;	//informacja dla HMI, flaga powyżej może być pominiąta gdyż odświerzanie HMI jest żadziej niż cykl PLC
(*	Stany i tryby 	*)
	stStany										: ARRAY [0..STALE.ILOSC_TRYBOW_PRACY] OF ST_SITP_Stany;
	stTryby										: ST_SITP_Tryby;
(*	Zgrupowane stany i tryby by można je sprawdzać w pętli	*)
	arrStanyWszystkichTrybow					: ARRAY [0..STALE.ILOSC_TRYBOW_PRACY] OF ARRAY [0..STALE.ILOSC_STANOW_PRACY] OF ITF_SITP_Element;
	refarrStany									: REFERENCE TO ARRAY [0..STALE.ILOSC_STANOW_PRACY] OF ITF_SITP_Element;	//stany dla aktualnego trybu pracy przypisywane przy zmianie trybu
	arrTryby									: ARRAY [0..STALE.ILOSC_TRYBOW_PRACY] OF ITF_SITP_Element;
(*	Polecenia zmiany stanu i trybu	*)
(*	zgrupowane polecenia zmiany by można je bylo sprawdzać w pętli	*)
	arrPoleceniaZmianyStanu						: ARRAY [0..STALE.ILOSC_POLECEN_ZMIANY_STANU] OF ITF_SITP_PolecenieZmianyStanu;
	arrPoleceniaZmianyTrybu						: ARRAY [0..STALE.ILOSC_POLECEN_ZMIANY_TRYBU] OF ITF_SITP_PolecenieZmianyTrybu;
(*	Wynik zakońćzenia operacji w stanie aktywnym	*)
	arrWynikZakonczeniaOperacji					: ARRAY  [1..B_Baza.STALE.MAX_ILOSC_PB] OF BOOL;
	bWyjdzZestanuAktywnego						: BOOL;
(*	Konfiguracja			*)
	bZredukowanaLiczbaPrzyciskow				: BOOL;
	arrStanyWlaczoneWTrybie						: ARRAY [0..STALE.ILOSC_TRYBOW_PRACY] OF ARRAY [0..STALE.ILOSC_STANOW_PRACY] OF BOOL;
	arrMozliwoscPrzejsciaPamiedzyTrybamiWStanie	: ARRAY [0..STALE.ILOSC_STANOW_PRACY] OF ARRAY [0..STALE.ILOSC_TRYBOW_PRACY] OF BOOL;	//informacja dla aktualnego stanu do jakich trybów można przejść
	arrTrybyWlaczone							: ARRAY [0..STALE.ILOSC_TRYBOW_PRACY] OF BOOL;
	
(*	Sygnalizacja			*)
	arrLampki									: ARRAY [1..STALE.ILOSC_LAMPEK_SYGNALIZACYJNYCH] OF B_IO.ITF_LampkaRozszerzona;
	stSygnalizacjaStanu							: ST_SITP_SygnalizacjaStanu;
	arrSygnalizacjaStanu						: ARRAY [0..STALE.ILOSC_STANOW_PRACY] OF ITF_SITP_SygnalizacjaStanu;
	
	
	
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>